# foundry-helpdesk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  azure.yaml  foundry-helpdesk-spec.md  release-please-config.json
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/cli/: provision_eval_rule.py  provision_guardrail.py  provision_memory.py
apps/backend/eval/: README.md  access_control_test.py  approval_mode_test.py  assertions.py  assurance.yaml  connection_ops_test.py  connection_store_test.py  connection_tools_build_test.py  domain_gate_test.py  domains_api_test.py  enabled_domains_roundtrip_test.py  grounded_acl_roundtrip_test.py  grounded_deployed_roundtrip_test.py  grounded_payload_test.py  hosted_platform_smoke_test.py  mcp_brokering_e2e_test.py  mcp_connect_test.py  mcp_learn_test.py  mcp_registry_test.py  memory_scope_test.py  multitenant_scheme_test.py  onboarding_guard_test.py  per_request_override_test.py  platform_hosted_bridge_test.py  platform_hosted_e2e_test.py  rbac_per_tool_test.py  red_team_test.py  run_eval.py  shared_boot_smoke_test.py  tenant_admin_e2e_test.py  tenant_e2e_test.py  tenant_provider_test.py  tenant_resolution_test.py  tenant_scope_test.py  tenant_store_test.py  tier_domains_test.py  wiki_freshness_test.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: auth.py  memory_provision.py  server.py  settings.py
backend/app/agents/: concierge.py  hello.py
backend/app/knowledge/: ingest.py
backend/app/tools/: tickets.py
(+294 files in other folders)
