[project]
name = "foundry-helpdesk-backend"
version = "0.1.0"
description = "Foundry Helpdesk backend — multi-agent workflow over AG-UI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent-framework>=1.9.0",
    "agent-framework-ag-ui>=1.0.0rc5",
    "azure-ai-projects>=2.2.0",
    "azure-identity>=1.25.3",
    "azure-search-documents>=11.7.0b2",
    "azure-storage-blob>=12.20.0",
    "fastapi-azure-auth>=5.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "azure-monitor-opentelemetry>=1.8.8",
    "azure-data-tables>=12.7.0",
]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
